Created ModelFile class and tests

--- a/VS2017/TBPUnpack.Tests/TBPUnpack.Tests.csproj
+++ b/VS2017/TBPUnpack.Tests/TBPUnpack.Tests.csproj
@@ -47,7 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TBPUnpackTests.cs" />
+    <Compile Include="ModelFileParserTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +58,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="ModelGroupXML1.txt" />
+    <Content Include="ModelFileXML1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
