--- a/VS2017/TBPUnpack.Tests/TBPUnpack.Tests.csproj
+++ b/VS2017/TBPUnpack.Tests/TBPUnpack.Tests.csproj
@@ -62,6 +62,8 @@
   <ItemGroup>
     <Content Include="ModelGroupXML1.txt" />
     <Content Include="ModelFileXML1.txt" />
+    <Content Include="LinkXML1.txt" />
+    <Content Include="ModelFileXML2.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
